fix(accessibility): add descriptive text to links, increase contrast ratio in footer links, change heading hierarchy in product slider so it's a higher hierarchy now

--- a/assets/footer.css
+++ b/assets/footer.css
@@ -34,13 +34,14 @@
 
 .footer__menu-item a {
     text-decoration: none;
-    color: rgb(104, 103, 103);
+    color: rgb(74, 74, 74);
     font-size: 0.85rem;
     transition: all 0.3s ease;
 }
 
 .footer__menu-item a:hover {
-    color: #3c3c3c;
+    color: #323232;
+    font-weight: 600;
     text-decoration: underline;
 }
 
